CreatePet profile picture reformatted to prevent stretching

--- a/src/style/CreatePets.css
+++ b/src/style/CreatePets.css
@@ -20,15 +20,20 @@
     border-bottom: solid 5px #1A535C;
 }
 
-.petprofilepicupload {
-    float: left;
-    width: 250px;
-    height: 250px;
+.upload-image-frame {
     margin-top: 3.5%;
     margin-left: 2%;
     margin-right: 2%;
     border-radius: 15px;
     border: solid 3px #FFE66D;
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+}
+
+.petprofilepicupload {
+    float: left;
+    width: 250px;
     object-fit: cover;
 }
 
